# gemini-agent-blueprint

./: .env.example  .gitignore  DESIGN.md  DESIGN.v2.md  Dockerfile  Makefile  README.md  agent.py  deploy.py  local_run.py  main.py  pyproject.toml
agents/: __init__.py  architect.py  assets.py  repo_builder.py  researchers.py  revision_writer.py  scout.py  triage.py  writer.py
agents/architect/: agent.py
agents/asset/: image.py  video.py
agents/editor/: agent.py
agents/repo_builder/: agent.py
agents/researchers/: context.py  docs.py  github.py
agents/revision_writer/: agent.py
agents/scout/: agent.py
agents/topic_gate/: agent.py
agents/triage/: agent.py
agents/writer/: critic.py  drafter.py
app/: __init__.py  agent.py  fast_api_app.py
app/.adk/: session.db
app/app_utils/: telemetry.py  typing.py
deploy/: deploy.sh.archived  gcs_bucket.tf  scheduler.tf  secrets.tf.archived  terraform.tfstate  terraform.tfstate.backup
deploy/cloud_function/: main.py  requirements.txt
deploy/terraform/: README.md  main.tf  outputs.tf
deploy/v2/: .gitignore  README.md  iam.tf  main.tf  outputs.tf  tfplan
docs/: ARCHITECTURE.md  PRE_PUBLISH_CHECKLIST.md
docs/launch/: article.md  linkedin-post.md  posting-checklist.md  tweet-thread.md
docs/superpowers/plans/: 2026-04-30-disable-rerun-on-resume.md  2026-05-01-fan-in-join.md  2026-05-01-public-launch.md
docs/superpowers/specs/: 2026-04-30-disable-rerun-on-resume-design.md  (+2 more)
nodes/: __init__.py  _join_node.py  aggregation.py  architect_split.py  critic_split.py  hitl.py  image_assets.py  publisher.py  records.py  routing.py  scout_split.py  video_asset.py
pipeline/: __init__.py  agent.py  requirements.txt
shared/: markdown_assets.py  memory.py  models.py  prompts.py
spike/: 01_workflow_basics.py  02_hitl_request_input.py  03_memory_bank.py  04_telegram_bridge.py  pyproject.toml  results.md
telegram_bridge/: Dockerfile  main.py  pyproject.toml
tests/: test_agent_config.py  test_aggregation.py  test_architect.py  test_architect_split.py  test_assets.py  test_critic_split.py  test_deploy.py  test_deploy_config.py  test_editor.py  test_graph_shape.py  test_join_node.py  test_memory.py  test_publisher.py  test_records.py  test_repo_builder.py  test_researchers.py  test_revision_writer.py  test_root_agent.py  test_routing.py  test_scout.py  test_scout_split.py  test_telegram.py  test_telegram_bridge.py  test_topic_gate.py  test_triage.py  test_video_asset.py  test_writer.py
tests/integration/: test_agent.py  test_server_e2e.py
tests/smoke/: gcs_smoke.py  github_smoke.py  imagen_smoke.py  memory_smoke.py  pollers_smoke.py  telegram_smoke.py  veo_smoke.py
tools/: gcs.py  github_ops.py  imagen.py  medium.py  memory.py  pollers.py  state_helpers.py  telegram.py  telegram_approval.py  veo.py  video_processing.py  web.py
(+2 files in other folders)
