[project]
name = "ai-release-pipeline"
version = "2.0.0"
description = "AI release → article pipeline on ADK 2.0 + Agent Runtime"
readme = "DESIGN.v2.md"
requires-python = ">=3.12"
dependencies = [
    # ADK 2.0 Beta — pinned exactly per DESIGN.v2.md §10.2.
    # Newer 2.0.x betas may introduce breaking changes to Workflow / RequestInput.
    "google-adk==2.0.0b1",
    # Vertex SDK + GCP services — semver-bounded.
    "google-cloud-aiplatform>=1.105,<2",
    "google-cloud-storage>=2.14,<3",
    "google-cloud-firestore>=2.14,<3",
    # Source-side tools that survive the v1 → v2 port.
    "PyGithub>=2.3,<3",
    "feedparser>=6.0,<7",
    "arxiv>=2.1,<3",
    "huggingface_hub>=0.25,<1",
    "python-telegram-bot>=21,<22",
    "pydantic>=2.5,<3",
    "Pillow>=10.0,<11",
    "requests>=2.32,<3",
    # NOTE: ffmpeg-python intentionally OMITTED — v2 ships MP4-only per §7.7 Q8.
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    # For tests/test_telegram_bridge.py — bridge code is in telegram_bridge/
    # but its tests live with the main suite for unified pytest run.
    "fastapi>=0.115",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
